fix whitespace bug

--- a/src/app/my-jobs/components/job-details/job-details.component.css
+++ b/src/app/my-jobs/components/job-details/job-details.component.css
@@ -40,6 +40,7 @@
 }
 
 .icons span{
+    white-space: pre;
     display: flex;
     align-items: center;
 }
